--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Good quality outdoor jackets from Rainy Days"
     />
-    <link href="css/Home.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
     <title>Rainy Days | Home</title>
   </head>
   <body>
@@ -21,11 +21,11 @@
       <a href="contact.html">Contact</a>
     </nav>
     <header class="header">
-      <a href="Index.html" class="bla">
-        <img src="logo/RainyDays_Logo_bare-fjellet.png" alt="Mountain logo" />
+      <a href="Index.html">
+        <img src="logo/RainyDays_Logo_bare-fjellet.png"  class="mountain" alt="Mountain logo" />
       </a>
-      <a href="cart.html" class="bla">
-        <img src="icons/shopping-cart.svg" alt="Shopping icon" />
+      <a href="cart.html">
+        <img src="icons/shopping-cart.svg"class="cart" alt="Shopping icon" />
       </a>
     </header>
     <main>
@@ -35,25 +35,16 @@
           class="blurred"
           alt="mountain"
         />
-        <img
-          src="logo/RainyDays_Logo-hvit.svg"
-          class="logo-on-image"
-          alt="rainydayslogo"
-        />
-        <div class="category-container">
-          <div class="category">
-            <a href="Men.html" class="link">Women</a>
-          </div>
-          <div class="category">
-            <a href="Men.html" class="link">Men</a>
-          </div>
         </div>
+        <div class="category-container">
+            <a href="Men.html" class="big-button">Women</a>
+            <a href="Men.html" class="big-button">Men</a>
       </div>
       <section class="new-in">
-        <h2>New in</h2>
-        <div>
-          <a>
-            <img src="images/RainyDays_Jacket1.png" alt="Rainy days 365" />
+        <h1 class="h2">New in</h1>
+        <div class="product-container">
+          <a href="product.html">
+            <img src="images/RainyDays_Jacket1.png" class="jacket" alt="Rainy days 365" />
           </a>
           <div class="product-text">
             <h3>Rainy days 365</h3>
@@ -61,26 +52,26 @@
             <p>Breathable</p>
             <p>1299 Nok</p>
           </div>
-          <div class="addtocart">
-            <a href="cart.html" class="link">Add to cart</a>
+          <div>
+            <a href="cart.html" class="button">Add to cart</a>
           </div>
         </div>
-        <div>
-          <a>
-            <img src="images/RainyDays_Jacket2.png" alt="Rainy days 265" />
+        <div class="product-container">
+          <a href="product.html">
+            <img src="images/RainyDays_Jacket2.png" class="jacket" alt="Rainy days 265" />
           </a>
           <div class="product-text">
             <h3>Rainy days 265</h3>
             <p>Breathable</p>
             <p>999 Nok</p>
           </div>
-          <div class="addtocart">
-            <a href="cart.html" class="link">Add to cart</a>
+          <div>
+            <a href="cart.html" class="button">Add to cart</a>
           </div>
         </div>
-        <div>
-          <a>
-            <img src="images/RainyDays_Jacket3.png" alt="Rainy days 165" />
+        <div class="product-container">
+          <a href="product.html">
+            <img src="images/RainyDays_Jacket3.png" class="jacket" alt="Rainy days 165" />
           </a>
           <div class="product-text">
             <h3>Rainy days 165</h3>
@@ -89,86 +80,86 @@
             <p>Water ressistant</p>
             <p>1999 Nok</p>
           </div>
-          <div class="addtocart">
-            <a href="cart.html" class="link">Add to cart</a>
+          <div>
+            <a href="cart.html" class="button">Add to cart</a>
           </div>
         </div>
-        <div>
-          <a>
-            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
+        <div class="product-container">
+          <a href="product.html">
+            <img src="images/RainyDays_Jacket4.png" class="jacket" alt="Rainy days 65" />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
             <p>Water ressistant</p>
             <p>1599 Nok</p>
           </div>
-          <div class="addtocart">
-            <a href="cart.html" class="link">Add to cart</a>
+          <div>
+            <a href="cart.html" class="button">Add to cart</a>
           </div>
         </div>
-        <div>
-          <a>
-            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
+        <div class="product-container">
+          <a href="product.html">
+            <img src="images/RainyDays_Jacket4.png" class="jacket" alt="Rainy days 65" />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
             <p>Water ressistant</p>
             <p>1599 Nok</p>
           </div>
-          <div class="addtocart">
-            <a href="cart.html" class="link">Add to cart</a>
+          <div">
+            <a href="cart.html" class="button">Add to cart</a>
           </div>
         </div>
-        <div>
-          <a>
-            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
+        <div class="product-container">
+          <a href="product.html">
+            <img src="images/RainyDays_Jacket4.png" class="jacket" alt="Rainy days 65" />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
             <p>Water ressistant</p>
             <p>1599 Nok</p>
           </div>
-          <div class="addtocart">
-            <a href="cart.html" class="link">Add to cart</a>
+          <div>
+            <a href="cart.html" class="button">Add to cart</a>
           </div>
         </div>
-        <div>
-          <a>
-            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
+        <div class="product-container">
+          <a href="product.html">
+            <img src="images/RainyDays_Jacket4.png" class="jacket" alt="Rainy days 65" />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
             <p>Water ressistant</p>
             <p>1599 Nok</p>
           </div>
-          <div class="addtocart">
-            <a href="cart.html" class="link">Add to cart</a>
+          <div>
+            <a href="cart.html" class="button">Add to cart</a>
           </div>
         </div>
-        <div>
-          <a>
-            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
+        <div class="product-container">
+          <a href="product.html">
+            <img src="images/RainyDays_Jacket4.png" class="jacket" alt="Rainy days 65" />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
             <p>Water ressistant</p>
             <p>1599 Nok</p>
           </div>
-          <div class="addtocart">
-            <a href="cart.html" class="link">Add to cart</a>
+          <div>
+            <a href="cart.html" class="button">Add to cart</a>
           </div>
         </div>
-        <div>
-          <a>
-            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
+        <div class="product-container">
+          <a href="product.html">
+            <img src="images/RainyDays_Jacket4.png" class="jacket" alt="Rainy days 65" />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
             <p>Water ressistant</p>
             <p>1599 Nok</p>
           </div>
-          <div class="addtocart">
-            <a href="cart.html" class="link">Add to cart</a>
+          <div>
+            <a href="cart.html" class="button">Add to cart</a>
           </div>
         </div>
       </section>
