--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="The start and history about Rainy Days" />
-    <link href="css/about.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
     <title>Rainy Days | About us</title>
   </head>
   <body>
@@ -18,28 +18,32 @@
       <a href="contact.html">Contact</a>
     </nav>
     <header class="header">
-      <a href="Index.html" class="bla">
+      <a href="Index.html">
         <img
           src="logo/RainyDays_Logo_bare-fjellet.png"
+          class="mountain"
           alt="Mountain logo"
-          width="250"
         />
       </a>
-      <a href="cart.html" class="bla">
-        <img src="icons/shopping-cart.svg" alt="Shopping icon" width="40" />
+      <a href="cart.html">
+        <img src="icons/shopping-cart.svg" class="cart" alt="Shopping icon" />
       </a>
     </header>
     <img
       src="images/gemma-evans-JUrolU3FLTA-unsplash.jpg"
+      class="blurred"
       alt="Name of picture"
     />
     <main>
       <h1>About us</h1>
       <p>
         Rainy days started in a garage in 2010. Since then we have worked our
-        way to becoming the best outdoor jacket company. We have jackets for all
-        year around, and can customize them for your needs. If you want to know
-        more about us, go check us out on instagram and facebook.
+        way to becoming the best outdoor jacket company.
+      </p>
+      <p>
+        We have jackets for all year around, and can customize them for your
+        needs. If you want to know more about us, go check us out on instagram
+        and facebook.
       </p>
     </main>
     <footer>
