--- a/cart.html
+++ b/cart.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Your personal cart" />
-    <link href="css/cart.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
     <title>Rainy Days | Cart</title>
   </head>
   <body>
@@ -18,18 +18,26 @@
       <a href="contact.html">Contact</a>
     </nav>
     <header class="header">
-      <a href="Index.html" class="bla">
-        <img src="logo/RainyDays_Logo_bare-fjellet.png" alt="Mountain logo" />
+      <a href="Index.html">
+        <img
+          src="logo/RainyDays_Logo_bare-fjellet.png"
+          class="mountain"
+          alt="Mountain logo"
+        />
       </a>
-      <a href="cart.html" class="bla">
-        <img src="icons/shopping-cart.svg" alt="Shopping icon" />
+      <a href="cart.html">
+        <img src="icons/shopping-cart.svg" class="cart" alt="Shopping icon" />
       </a>
     </header>
     <main>
       <h1>Cart</h1>
-      <div class="rainy">
-        <img src="images/RainyDays_Jacket1.png" alt="Rainy days 365" />
-        <div class="text">
+      <div class="product-container">
+        <img
+          src="images/RainyDays_Jacket1.png"
+          class="jacket"
+          alt="Rainy days 365"
+        />
+        <div class="product-text">
           <h3>Rainy days 365</h3>
           <p>Water ressistant</p>
           <p>Breathable</p>
@@ -51,6 +59,7 @@
         <a href="Check-out.html" class="button">Order now</a>
         <a href="Index.html" class="button">Continue shopping</a>
       </div>
+      <div class="space"></div>
     </main>
     <footer>
       <h3>Contact</h3>
