--- a/check-out.html
+++ b/check-out.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="check out" />
-    <link href="css/checkout.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
     <title>Rainy Days | Check out</title>
   </head>
   <body>
@@ -18,23 +18,25 @@
       <a href="contact.html">Contact</a>
     </nav>
     <header class="header">
-      <a href="Index.html" class="bla">
-        <img src="logo/RainyDays_Logo_bare-fjellet.png" alt="Mountain logo" />
+      <a href="Index.html">
+        <img
+          src="logo/RainyDays_Logo_bare-fjellet.png"
+          class="mountain"
+          alt="Mountain logo"
+        />
       </a>
-      <a href="cart.html" class="bla">
-        <img src="icons/shopping-cart.svg" alt="Shopping icon" />
+      <a href="cart.html">
+        <img src="icons/shopping-cart.svg" class="cart" alt="Shopping icon" />
       </a>
     </header>
     <main>
       <h1>Check out</h1>
-      <div class="cart">
-        <div class="rainy">
-          <img
-            src="images/RainyDays_Jacket1.png"
-            alt="Rainy days 365"
-            class="image"
-          />
-        </div>
+      <div class="product-container">
+        <img
+          src="images/RainyDays_Jacket1.png"
+          class="jacket"
+          alt="Rainy days 365"
+        />
       </div>
       <div>
         <div class="price">
@@ -55,6 +57,7 @@
           <a href="resipt.html" class="button">Purchase</a>
         </div>
       </div>
+      <div class="space"></div>
     </main>
     <footer>
       <h3>Contact</h3>
