--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Contact us for any questions" />
-    <link href="css/contact.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
     <title>Rainy Days | Contact</title>
   </head>
   <body>
@@ -18,15 +18,15 @@
       <a href="contact.html">Contact</a>
     </nav>
     <header class="header">
-      <a href="Index.html" class="bla">
+      <a href="Index.html">
         <img
           src="logo/RainyDays_Logo_bare-fjellet.png"
+          class="mountain"
           alt="Mountain logo"
-          width="250"
         />
       </a>
-      <a href="cart.html" class="bla">
-        <img src="icons/shopping-cart.svg" alt="Shopping icon" width="40" />
+      <a href="cart.html">
+        <img src="icons/shopping-cart.svg" class="cart" alt="Shopping icon" />
       </a>
     </header>
     <main>
@@ -41,9 +41,11 @@
         <p>Write your message in the box below</p>
         <textarea id="freeform" name="Message" rows="4" cols="50"></textarea>
       </div>
+      <div class="content"></div>
       <div>
-        <a href="sucsess.html" class="cta">Send message</a>
+        <a href="sucsess.html" class="button">Send message</a>
       </div>
+      <div class="space"></div>
     </main>
     <footer>
       <h3>Contact</h3>
