--- a/product.html
+++ b/product.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="resipt" />
+    <meta
+      name="description"
+      content="Rainy days 365, great for outdoor activities"
+    />
     <link href="css/styles.css" rel="stylesheet" />
-    <title>Rainy Days | Resipt</title>
+    <title>Rainy Days | Product view</title>
   </head>
   <body>
     <nav class="navbar">
@@ -30,21 +33,24 @@
       </a>
     </header>
     <main>
-      <section>
-        <h1>Resipt</h1>
-        <p>Success!</p>
-        <p>Your order is confirmed!</p>
-        <p>
-          You will recieve an email within 24- hours. If you do not recieve an
-          email, please contact us on
-        </p>
-        <p>Rainydays@gmail.com</p>
-      </section>
-      <div class="content"></div>
-      <div>
-        <a href="Index.html" class="button">Continue shopping</a>
+      <h1>Rainy days 365</h1>
+      <div class="rainy">
+        <img src="images/RainyDays_Jacket1.png" alt="Rainy days 365" />
+        <div class="text">
+          <h3>Rainy days 365</h3>
+          <p>Water ressistant</p>
+          <p>Breathable</p>
+        </div>
       </div>
-      <div class="space"></div>
+      <p>
+        Rainy days 365 is the perfect jacket for outdoor activities. It comes in
+        three sizes (S,M,L). It is breathable but also water ressistant.
+        excellent for hiking
+      </p>
+      <div class="buttons">
+        <a href="cart.html" class="button">Add to cart</a>
+        <a href="Index.html" class="button">back to home</a>
+      </div>
     </main>
     <footer>
       <h3>Contact</h3>
