--- a/sucsess.html
+++ b/sucsess.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="sucsessful Purchase" />
-    <link href="css/sucsess.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
     <title>Rainy Days | sucsess</title>
   </head>
   <body>
@@ -18,15 +18,15 @@
       <a href="contact.html">Contact</a>
     </nav>
     <header class="header">
-      <a href="Index.html" class="bla">
+      <a href="Index.html">
         <img
           src="logo/RainyDays_Logo_bare-fjellet.png"
+          class="mountain"
           alt="Mountain logo"
-          width="250"
         />
       </a>
-      <a href="cart.html" class="bla">
-        <img src="icons/shopping-cart.svg" alt="Shopping icon" width="40" />
+      <a href="cart.html">
+        <img src="icons/shopping-cart.svg" class="cart" alt="Shopping icon" />
       </a>
     </header>
     <main>
@@ -34,8 +34,10 @@
       <div>
         <p>Message sent!</p>
         <p>Your message is sent. We will answer as soon as we can</p>
-        <a href="Index.html" class="cta">Back to home</a>
+        <div class="content"></div>
+        <a href="Index.html" class="button">Continue shopping</a>
       </div>
+      <div class="space"></div>
     </main>
     <footer>
       <h3>Contact</h3>
