--- a/Men.html
+++ b/Men.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Good quality outdoor jackets for men" />
-    <link href="css/men.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
     <title>Rainy Days | Men</title>
   </head>
   <body>
@@ -18,126 +18,174 @@
       <a href="contact.html">Contact</a>
     </nav>
     <header class="header">
-      <a href="Index.html" class="bla">
-        <img src="logo/RainyDays_Logo_bare-fjellet.png" alt="Mountain logo" />
+      <a href="Index.html">
+        <img
+          src="logo/RainyDays_Logo_bare-fjellet.png"
+          class="mountain"
+          alt="Mountain logo"
+        />
       </a>
-      <a href="cart.html" class="bla">
-        <img src="icons/shopping-cart.svg" alt="Shopping icon" />
+      <a href="cart.html">
+        <img src="icons/shopping-cart.svg" class="cart" alt="Shopping icon" />
       </a>
     </header>
     <main>
-      <section class="men">
-        <h1>Men</h1>
-        <div>
-          <a>
-            <img src="images/RainyDays_Jacket1.png" alt="Rainy days 365" />
+      <section class="new-in">
+        <h1 class="h2">Men</h1>
+        <div class="product-container">
+          <a href="product.html">
+            <img
+              src="images/RainyDays_Jacket1.png"
+              class="jacket"
+              alt="Rainy days 365"
+            />
           </a>
-          <h3>Rainy days 365</h3>
-          <p>Water ressistant</p>
-          <p>Breathable</p>
-          <p>1299 Nok</p>
-          <div class="addtocart">
-            <a href="cart.html" class="link">Add to cart</a>
+          <div class="product-text">
+            <h3>Rainy days 365</h3>
+            <p>Water ressistant</p>
+            <p>Breathable</p>
+            <p>1299 Nok</p>
+          </div>
+          <div>
+            <a href="cart.html" class="button">Add to cart</a>
           </div>
         </div>
-        <div>
-          <a>
-            <img src="images/RainyDays_Jacket2.png" alt="Rainy days 265" />
+        <div class="product-container">
+          <a href="product.html">
+            <img
+              src="images/RainyDays_Jacket2.png"
+              class="jacket"
+              alt="Rainy days 265"
+            />
           </a>
-          <h3>Rainy days 265</h3>
-          <p>Breathable</p>
-          <p>999 Nok</p>
-          <div class="addtocart">
-            <a href="cart.html" class="link">Add to cart</a>
+          <div class="product-text">
+            <h3>Rainy days 265</h3>
+            <p>Breathable</p>
+            <p>999 Nok</p>
+          </div>
+          <div>
+            <a href="cart.html" class="button">Add to cart</a>
           </div>
         </div>
-        <div>
-          <a>
-            <img src="images/RainyDays_Jacket3.png" alt="Rainy days 165" />
+        <div class="product-container">
+          <a href="product.html">
+            <img
+              src="images/RainyDays_Jacket3.png"
+              class="jacket"
+              alt="Rainy days 165"
+            />
           </a>
-          <h3>Rainy days 165</h3>
-          <p>Winter</p>
-          <p>Breathable</p>
-          <p>Water ressistant</p>
-          <p>1999 Nok</p>
-          <div class="addtocart">
-            <a href="cart.html" class="link">Add to cart</a>
+          <div class="product-text">
+            <h3>Rainy days 165</h3>
+            <p>Winter</p>
+            <p>Breathable</p>
+            <p>Water ressistant</p>
+            <p>1999 Nok</p>
+          </div>
+          <div>
+            <a href="cart.html" class="button">Add to cart</a>
           </div>
         </div>
-        <div>
-          <a>
-            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
-          </a>
-          <h3>Rainy days 65</h3>
-          <p>Water ressistant</p>
-          <p>1599 Nok</p>
-          <div class="addtocart">
-            <a href="cart.html" class="link">Add to cart</a>
-          </div>
-        </div>
-        <div>
-          <a>
-            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
+        <div class="product-container">
+          <a href="product.html">
+            <img
+              src="images/RainyDays_Jacket4.png"
+              class="jacket"
+              alt="Rainy days 65"
+            />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
             <p>Water ressistant</p>
             <p>1599 Nok</p>
           </div>
-          <div class="addtocart">
-            <a href="cart.html" class="link">Add to cart</a>
+          <div>
+            <a href="cart.html" class="button">Add to cart</a>
           </div>
         </div>
-        <div>
-          <a>
-            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
+        <div class="product-container">
+          <a href="product.html">
+            <img
+              src="images/RainyDays_Jacket4.png"
+              class="jacket"
+              alt="Rainy days 65"
+            />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
             <p>Water ressistant</p>
             <p>1599 Nok</p>
           </div>
-          <div class="addtocart">
-            <a href="cart.html" class="link">Add to cart</a>
+          <div>
+            <a href="cart.html" class="button">Add to cart</a>
           </div>
         </div>
-        <div>
-          <a>
-            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
+        <div class="product-container">
+          <a href="product.html">
+            <img
+              src="images/RainyDays_Jacket4.png"
+              class="jacket"
+              alt="Rainy days 65"
+            />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
             <p>Water ressistant</p>
             <p>1599 Nok</p>
           </div>
-          <div class="addtocart">
-            <a href="cart.html" class="link">Add to cart</a>
+          <div>
+            <a href="cart.html" class="button">Add to cart</a>
           </div>
         </div>
-        <div>
-          <a>
-            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
+        <div class="product-container">
+          <a href="product.html">
+            <img
+              src="images/RainyDays_Jacket4.png"
+              class="jacket"
+              alt="Rainy days 65"
+            />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
             <p>Water ressistant</p>
             <p>1599 Nok</p>
           </div>
-          <div class="addtocart">
-            <a href="cart.html" class="link">Add to cart</a>
+          <div>
+            <a href="cart.html" class="button">Add to cart</a>
           </div>
         </div>
-        <div>
-          <a>
-            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
+        <div class="product-container">
+          <a href="product.html">
+            <img
+              src="images/RainyDays_Jacket4.png"
+              class="jacket"
+              alt="Rainy days 65"
+            />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
             <p>Water ressistant</p>
             <p>1599 Nok</p>
           </div>
-          <div class="addtocart">
-            <a href="cart.html" class="link">Add to cart</a>
+          <div>
+            <a href="cart.html" class="button">Add to cart</a>
+          </div>
+        </div>
+        <div class="product-container">
+          <a href="product.html">
+            <img
+              src="images/RainyDays_Jacket4.png"
+              class="jacket"
+              alt="Rainy days 65"
+            />
+          </a>
+          <div class="product-text">
+            <h3>Rainy days 65</h3>
+            <p>Water ressistant</p>
+            <p>1599 Nok</p>
+          </div>
+          <div>
+            <a href="cart.html" class="button">Add to cart</a>
           </div>
         </div>
       </section>
