--- a/Index.html
+++ b/Index.html
@@ -22,10 +22,14 @@
     </nav>
     <header class="header">
       <a href="Index.html">
-        <img src="logo/RainyDays_Logo_bare-fjellet.png"  class="mountain" alt="Mountain logo" />
+        <img
+          src="logo/RainyDays_Logo_bare-fjellet.png"
+          class="mountain"
+          alt="Mountain logo"
+        />
       </a>
       <a href="cart.html">
-        <img src="icons/shopping-cart.svg"class="cart" alt="Shopping icon" />
+        <img src="icons/shopping-cart.svg" class="cart" alt="Shopping icon" />
       </a>
     </header>
     <main>
@@ -35,16 +39,20 @@
           class="blurred"
           alt="mountain"
         />
-        </div>
-        <div class="category-container">
-            <a href="Men.html" class="big-button">Women</a>
-            <a href="Men.html" class="big-button">Men</a>
+      </div>
+      <div class="category-container">
+        <a href="Men.html" class="big-button">Women</a>
+        <a href="Men.html" class="big-button">Men</a>
       </div>
       <section class="new-in">
         <h1 class="h2">New in</h1>
         <div class="product-container">
           <a href="product.html">
-            <img src="images/RainyDays_Jacket1.png" class="jacket" alt="Rainy days 365" />
+            <img
+              src="images/RainyDays_Jacket1.png"
+              class="jacket"
+              alt="Rainy days 365"
+            />
           </a>
           <div class="product-text">
             <h3>Rainy days 365</h3>
@@ -58,7 +66,11 @@
         </div>
         <div class="product-container">
           <a href="product.html">
-            <img src="images/RainyDays_Jacket2.png" class="jacket" alt="Rainy days 265" />
+            <img
+              src="images/RainyDays_Jacket2.png"
+              class="jacket"
+              alt="Rainy days 265"
+            />
           </a>
           <div class="product-text">
             <h3>Rainy days 265</h3>
@@ -71,7 +83,11 @@
         </div>
         <div class="product-container">
           <a href="product.html">
-            <img src="images/RainyDays_Jacket3.png" class="jacket" alt="Rainy days 165" />
+            <img
+              src="images/RainyDays_Jacket3.png"
+              class="jacket"
+              alt="Rainy days 165"
+            />
           </a>
           <div class="product-text">
             <h3>Rainy days 165</h3>
@@ -86,7 +102,11 @@
         </div>
         <div class="product-container">
           <a href="product.html">
-            <img src="images/RainyDays_Jacket4.png" class="jacket" alt="Rainy days 65" />
+            <img
+              src="images/RainyDays_Jacket4.png"
+              class="jacket"
+              alt="Rainy days 65"
+            />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
@@ -99,20 +119,11 @@
         </div>
         <div class="product-container">
           <a href="product.html">
-            <img src="images/RainyDays_Jacket4.png" class="jacket" alt="Rainy days 65" />
-          </a>
-          <div class="product-text">
-            <h3>Rainy days 65</h3>
-            <p>Water ressistant</p>
-            <p>1599 Nok</p>
-          </div>
-          <div">
-            <a href="cart.html" class="button">Add to cart</a>
-          </div>
-        </div>
-        <div class="product-container">
-          <a href="product.html">
-            <img src="images/RainyDays_Jacket4.png" class="jacket" alt="Rainy days 65" />
+            <img
+              src="images/RainyDays_Jacket4.png"
+              class="jacket"
+              alt="Rainy days 65"
+            />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
@@ -125,7 +136,11 @@
         </div>
         <div class="product-container">
           <a href="product.html">
-            <img src="images/RainyDays_Jacket4.png" class="jacket" alt="Rainy days 65" />
+            <img
+              src="images/RainyDays_Jacket4.png"
+              class="jacket"
+              alt="Rainy days 65"
+            />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
@@ -138,7 +153,11 @@
         </div>
         <div class="product-container">
           <a href="product.html">
-            <img src="images/RainyDays_Jacket4.png" class="jacket" alt="Rainy days 65" />
+            <img
+              src="images/RainyDays_Jacket4.png"
+              class="jacket"
+              alt="Rainy days 65"
+            />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
@@ -151,7 +170,28 @@
         </div>
         <div class="product-container">
           <a href="product.html">
-            <img src="images/RainyDays_Jacket4.png" class="jacket" alt="Rainy days 65" />
+            <img
+              src="images/RainyDays_Jacket4.png"
+              class="jacket"
+              alt="Rainy days 65"
+            />
+          </a>
+          <div class="product-text">
+            <h3>Rainy days 65</h3>
+            <p>Water ressistant</p>
+            <p>1599 Nok</p>
+          </div>
+          <div>
+            <a href="cart.html" class="button">Add to cart</a>
+          </div>
+        </div>
+        <div class="product-container">
+          <a href="product.html">
+            <img
+              src="images/RainyDays_Jacket4.png"
+              class="jacket"
+              alt="Rainy days 65"
+            />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
