--- a/product.html
+++ b/product.html
@@ -34,9 +34,13 @@
     </header>
     <main>
       <h1>Rainy days 365</h1>
-      <div class="rainy">
-        <img src="images/RainyDays_Jacket1.png" alt="Rainy days 365" />
-        <div class="text">
+      <div class="product-container">
+        <img
+          src="images/RainyDays_Jacket1.png"
+          class="jacket"
+          alt="Rainy days 365"
+        />
+        <div class="product-text">
           <h3>Rainy days 365</h3>
           <p>Water ressistant</p>
           <p>Breathable</p>
@@ -47,10 +51,12 @@
         three sizes (S,M,L). It is breathable but also water ressistant.
         excellent for hiking
       </p>
+      <div class="space"></div>
       <div class="buttons">
         <a href="cart.html" class="button">Add to cart</a>
         <a href="Index.html" class="button">back to home</a>
       </div>
+      <div class="space"></div>
     </main>
     <footer>
       <h3>Contact</h3>
