--- a/cart.html
+++ b/cart.html
@@ -31,7 +31,7 @@
     </header>
     <main>
       <h1>Cart</h1>
-      <div class="product-container">
+      <div class="cart-container">
         <img
           src="images/RainyDays_Jacket1.png"
           class="jacket"
@@ -42,14 +42,6 @@
           <p>Water ressistant</p>
           <p>Breathable</p>
         </div>
-      </div>
-      <div class="price">
-        <p>Rainy days 365</p>
-        <p>1299 Nok</p>
-      </div>
-      <div class="shipping">
-        <p>Shipping</p>
-        <p>0 Nok</p>
       </div>
       <div class="total">
         <p>Total</p>
